# nav2_teb_controller

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  ToDo.md  nav2_teb_controller.repos  nav2_teb_controller_plugin.xml  package.xml
.github/workflows/: ci.yml
config/: teb_controller_parameters.yaml  teb_controller_params.yaml
doc/: architecture.md
include/nav2_teb_controller/: math_utils.hpp  teb_controller.hpp
include/nav2_teb_controller/core/: footprint.hpp  pose_se2.hpp  teb_utils.hpp  timed_elastic_band.hpp
include/nav2_teb_controller/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_acceleration_goal.h  edge_acceleration_holonomic.h  edge_acceleration_holonomic_goal.h  edge_acceleration_holonomic_start.h  edge_acceleration_start.h  edge_costmap_obstacle.h  edge_esdf_obstacle.h  edge_g3_continuity.h  edge_goal_angular_velocity_zero.h  edge_jerk.h  edge_jerk_new.h  edge_kinematic_car_like.h  edge_kinematics_diff.h  edge_path_smoothness.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_snap.h  edge_start_steering_angle.h  edge_steering_angle_goal.h  edge_steering_rate.h  edge_steering_rate_goal.h  edge_steering_rate_start.h  edge_time_optimal.h  edge_velocity.h  edge_velocity_holonomic.h  edge_via_point.h  penalties.h  vertex_pose.h  vertex_timediff.h
include/nav2_teb_controller/homotopy/: graph_search_interface.hpp  h_signature.hpp  homotopy_class_planner.hpp  teb_candidate.hpp  visibility_graph.hpp  visibility_graph_search.hpp
include/nav2_teb_controller/obstacles/: esdf.hpp
include/nav2_teb_controller/planner/: optimal_planner.hpp  planner_interface.hpp
include/nav2_teb_controller/visualization/: teb_visualizer.hpp
launch/: nav2_teb_controller_launch.py
scripts/: footprint_polygon_to_circles.py
src/: teb_controller.cpp
src/core/: teb_utils.cpp
src/homotopy/: homotopy_class_planner.cpp  visibility_graph_search.cpp
src/obstacles/: esdf.cpp
src/planner/: optimal_planner.cpp
test/: CMakeLists.txt
test/unit/g2o_types/: test_edge_path_smoothness.cpp  test_edge_shortest_path.cpp  test_edge_time_optimal.cpp
