<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_teb_controller</name>
  <version>0.1.0</version>
  <description>
    TEB-K: Timed Elastic Band with polynomial (cubic Hermite) trajectory segments.
    A Nav2 controller plugin for kinematically complex robots (Ackermann, Tricycle, AGV).
  </description>
  <maintainer email="dyousef@bleichert.de">daniel</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <!-- Core ROS2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>

  <!-- Nav2 -->
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>

  <!-- Messages -->
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Math / optimization -->
  <depend>eigen3_cmake_module</depend>
  <build_depend>libg2o</build_depend>
  <build_depend>angles</build_depend>

  <!-- Legacy dependencies -->
  <depend>costmap_converter</depend>
  <depend>costmap_converter_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
